[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://SpaceShooterRedux/PNG/playerShip1_blue.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 11 )

[node name="Player" type="RigidBody2D" groups=[
"player",
]]
position = Vector2( 300, 400 )
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -10 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="LiveTimer" type="Timer" parent="."]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_LiveTimer_timeout"]
